fix output with nodes
